--- a/PmuMentor-Login.html
+++ b/PmuMentor-Login.html
@@ -8,13 +8,13 @@
 <body>
     <div class="container">
         <div class="login-box">
-            <h2>Login</h2>
+            <h2>Custom Login</h2>
             <form>
-                <input type="text" name="pmu_id" placeholder="PMU ID" required><br>
-                <input type="password" name="password" placeholder="Password" required><br>
+                <input type="text" name="custom_id" placeholder="CUSTOM ID" required><br>
+                <input type="password" name="custom_password" placeholder="Password" required><br>
                 <button type="submit" class="login-btn">Login</button>
             </form>
-            <p>Don't have an account? <a href="PmuMentor-Signup.html">Signup</a></p>
+            <p>Don't have an account? <a href="custom-Signup.html">Signup</a></p>
             <a href="PmuMentor-Main.html">Return to HomePage</a>
         </div>
     </div>
