--- a/PmuMentor-Login.html
+++ b/PmuMentor-Login.html
@@ -8,7 +8,7 @@
 <body>
     <div class="container">
         <div class="login-box">
-            <h2>Custom Login</h2>
+            <h2>Login</h2>
             <form>
                 <input type="text" name="custom_id" placeholder="CUSTOM ID" required><br>
                 <input type="password" name="custom_password" placeholder="Password" required><br>
